--- a/Profile.html
+++ b/Profile.html
@@ -15,26 +15,35 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
-  <title>Big-Gogh</title>
+  <title>Big Gogh - Profile</title>
 </head>
 
 <body>
   <div class="minAl">
     <div class="all">
       <div class="logo">
-        <p>Big Gogh</p>
+        <p>Big Gogh </p>
       </div>
       <nav>
         <ul>
-          <li><a href="Profile.html"><i class="fa-solid fa-diagram-project"></i><span>Profile</span></a></li>
-          <li><a href="Servises.html"><i class="fa-solid fa-diagram-project"></i><span>Servises</span></a>
+          <li><a href="Profile.html"><i class="fa-solid fa-address-card"></i><span>Profile</span></a></li>
+          <li><a href="Servises.html"><i class="fa-solid fa-wand-magic-sparkles"></i><span>Servises</span></a>
           </li>
-          <li><a href="Projcts.html"><i class="fa-solid fa-diagram-project"></i><span>Projcts</span></a></li>
-          <li><a href="Contact.html"><i class="fa-solid fa-diagram-project"></i><span>Contact</span></a></li>
+          <li><a href="Projcts.html"><i class="fa-solid fa-network-wired"></i><span>Projcts</span></a></li>
+          <li><a href="Contact.html"><i class="fa-solid fa-envelope"></i><span>Contact</span></a></li>
         </ul>
       </nav>
     </div>
-    <div></div>
+    <div class="Profile">
+      <h1>Profile</h1>
+      <div class="box">
+        <img src="images/ProfileThree.jpg" alt="">
+        <h2>Welcome</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident explicabo nobis animi, accusamus est
+          corrupti eaque facilis, minus doloremque velit aspernatur id distinctio praesentium dolorem ad magni, a
+          excepturi fugit?</p>
+      </div>
+    </div>
   </div>
 </body>
 
